# STAR-Nav

./: .gitignore  DEPLOY_NOVELTY.md  README.md  progress.md  requirements.txt
checkpoints/: README.md
configs/: default.yaml  smoke_test.yaml
hardware/: README.md  telemetry_logger.py
map-unreal/: README.md
renders/: traj.csv
ros_gazebo_bridge/: README.md  package.xml  setup.cfg  setup.py
ros_gazebo_bridge/docker/: Dockerfile.px4_gazebo  Dockerfile.ros_bridge  MANUAL_FLIGHT_GUIDE.md  README.md  camera.sh  docker-compose.ci.yml  docker-compose.yml  entrypoint_px4_gazebo.sh  entrypoint_ros_bridge.sh  fly_keyboard.sh  rqt_tools.sh  setup_linux.sh  start_sim.sh  stop_sim.sh
ros_gazebo_bridge/launch/: corridor_sim.launch.py
ros_gazebo_bridge/perception_capture/: README.md  capture_scenario_a.sdf  capture_world_gen.py  collect_dataset.py
ros_gazebo_bridge/px4_airframes/: 4012_gz_pavo_femto  4013_gz_fpv5
ros_gazebo_bridge/px4_models/fpv5/: model.config  model.sdf
ros_gazebo_bridge/px4_models/oil_palm/: model.config  model.sdf
ros_gazebo_bridge/px4_models/oil_palm/meshes/: kelapa_sawit.fbx  kelapa_sawit.mtl  kelapa_sawit_tex.glb
ros_gazebo_bridge/px4_models/pavo_femto/: model.config  model.sdf
ros_gazebo_bridge/px4_models/person_worker/: model.config  model.sdf
ros_gazebo_bridge/ros_gazebo_bridge/: __init__.py  env.py  fpv5_gen.py  keyboard_control.py  manual_control.py  pavo_femto_gen.py  ros_bridge_node.py  vio_bridge.py  world_gen.py
ros_gazebo_bridge/test/: test_world_gen.py
ros_gazebo_bridge/tools/: make_flight_video.py  record_trajectory.py
(+538 files in other folders)
